# target_streamer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  requirements.txt
config/: data.yaml
data/test/python/results/cv2_detector/labels/: test_100.txt  test_110.txt  test_120.txt  test_140.txt  test_70.txt  test_90.txt  test_light_100.txt  test_light_120.txt  test_light_130.txt  test_light_60.txt  test_light_70.txt  test_light_80.txt  test_marks.txt
data/test/python/results/yolov5n/labels/: test_100.txt  test_110.txt  test_120.txt  test_130.txt  test_140.txt  test_60.txt  test_70.txt  test_80.txt  test_90.txt  test_light_100.txt  test_light_110.txt  test_light_120.txt  test_light_130.txt  test_light_140.txt  test_light_60.txt  test_light_70.txt  test_light_80.txt  test_light_90.txt  test_marks.txt
data/test/results/cv2_detector/labels/: test_100.txt  test_110.txt  test_120.txt  test_130.txt  test_140.txt  test_60.txt  test_70.txt  test_80.txt  test_90.txt  test_light_100.txt  test_light_110.txt  test_light_130.txt  test_light_140.txt  test_light_70.txt  test_light_80.txt  test_light_90.txt  test_marks.txt
data/test/results/yolov5n/labels/: test_100.txt  test_110.txt  test_120.txt  test_130.txt  test_140.txt  test_60.txt  test_70.txt  test_80.txt  test_90.txt  test_light_100.txt  test_light_110.txt  test_light_120.txt  test_light_130.txt  test_light_140.txt  test_light_60.txt  test_light_70.txt  test_light_80.txt  test_light_90.txt  test_marks.txt
notebooks/: create_qr_codes.ipynb  qr_detector_training.ipynb  qr_homography_sensor.ipynb
results/yolov5n/labels/: test_100.txt  test_120.txt  test_60.txt  test_80.txt  test_90.txt  test_light_110.txt  test_light_120.txt  test_light_60.txt  test_light_80.txt
runs/train/qr_code_detector/: opt.yaml  results.csv
runs/train/qr_code_detector/weights/: last.pt
runs/train/qr_code_detector3/weights/: best.pt
src/cpp/: CMakeLists.txt
src/cpp/camera/: CMakeLists.txt  camera.cpp  camera.hpp  capture.cpp
src/cpp/detectors/: CMakeLists.txt  qr_detector.cpp  qr_detector.h  yolo_detector.cpp  yolo_detector.h
src/cpp/logger/: CMakeLists.txt  logger.cpp  logger.hpp  logger_bindings.cpp
src/cpp/transformations/: CMakeLists.txt  homography_handler.cpp  homography_handler.h
src/cpp/utilities/: CMakeLists.txt  utilities.cpp  utilities.h
src/cpp/validators/: CMakeLists.txt  validator.cpp  validator.h
src/python/: camera.py  code_detector.py  logger.py
tests/cpp/: CMakeLists.txt  test_camera.cpp  test_logger.cpp  test_workflow.cpp
tests/python/: model_test.py  test_logger.py
